# tee_median_poc

./: .gitignore  Dockerfile  LICENSE  Makefile  docker-compose.yaml  runall.sh
app/: Cargo.toml  build.rs
app/src/: main.rs  quote_helpers.rs  quote_result.txt  quotes.rs  quotes_sim.rs
doc/: get_started_with_teaclave.md
enclave/: Cargo.toml  Enclave.edl  Makefile
enclave/src/: lib.rs
qpl/: Cargo.toml
